Feat: 콘서트 전체좌석개수 조회 & 콘서트일정 매진 - 서비스기능 추가