@@ -85,15 +85,12 @@ public class ConcertDate extends BaseEntity {
 	// 콘서트날짜:콘서트=N:1
 	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(name ="concert_id", foreignKey = @ForeignKey(value = ConstraintMode.NO_CONSTRAINT))
-	@JsonBackReference("concert-dates")
 	private Concert concert;
 	// 콘서트날짜:좌석=1:N
 	@OneToMany(mappedBy = "concertDate", cascade = CascadeType.ALL, orphanRemoval = true)
-	@JsonManagedReference("concertDate-seats")
 	private List<ConcertSeat> seats = new ArrayList<>();
 	// 콘서트날짜:예약=1:N
 	@OneToMany(mappedBy = "concertDate")
-	@JsonIgnore
 	private List<Reservation> reservations = new ArrayList<>();
 
 	/**
@@ -121,8 +118,8 @@ public class ConcertDate extends BaseEntity {
 	 */
 	public int countAvailableSeats() {
 		List<ConcertSeat> availableSeats = this.seats.stream()
-			.filter(concertSeat -> concertSeat.isAvailable())
-			.collect(Collectors.toList());
+			.filter(ConcertSeat::isAvailable)
+			.toList();
 		return availableSeats.size();
 	}
 	/**
